// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompt component matches snapshot (default props) 1`] = `
<Dialog
  footerContent={
    <Flex
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <Button
          label="bar"
        />
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <Button
          label="foo"
        />
      </FlexItem>
    </Flex>
  }
/>
`;

exports[`Prompt component matches snapshot (default props) 2`] = `
<Dialog
  footerContent={
    <Flex
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <Button
          label="bar"
        />
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <Button
          label="foo"
        />
      </FlexItem>
    </Flex>
  }
  isOpen={true}
/>
`;

exports[`Prompt component matches snapshot (set all props) 1`] = `
<Dialog
  content="desc"
  footerContent={
    <Flex
      justify="end"
      wrap={true}
    >
      <FlexItem
        shrink={true}
      >
        <Button
          label="bar"
        />
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <Button
          label="foo"
        />
      </FlexItem>
    </Flex>
  }
  isOpen={true}
  title="title"
/>
`;
